--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
   <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
 <% end %>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/ideas">Events</a></li>
+        <li class="active"><a href="/events">Events</a></li>
       </ul>
     </div>
   </div>
@@ -52,7 +52,7 @@
   
 <footer>
   <div class="container">
-    Rails Girls 2015
+    Event Chan 2015
   </div>
 </footer>
 <!-- Latest compiled and minified JavaScript -->
