--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,30 @@
-<h1>Event List</h1>
+<h1>全社向けイベント一覧</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>イベント名</th>
+      <th>開催日</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @events.order("startEvent asc").each do |event| %>
+      <tr>
+        <td><%= event.eventName %></td>
+        <td><%= event.startEvent.strftime("%y/%m/%d\(%a\)") %></td>
+        <td><%= link_to 'Show', event %></td>
+        <td><%= link_to 'Edit', edit_event_path(event) %></td>
+        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<h1>関係者向けイベント一覧</h1>
 
 <table>
   <thead>
@@ -10,7 +36,7 @@
   </thead>
 
   <tbody>
-    <% @events.each do |event| %>
+    <% @events.order("startEvent asc").each do |event| %>
       <tr>
         <td><%= event.eventName %></td>
         <td><%= event.startEvent.strftime("%y/%m/%d\(%a\)") %></td>
