sort by eventlist

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -32,6 +32,6 @@
     <%= f.text_area(:eventComment,:maxlength => "200") %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "登録する" %>
   </div>
 <% end %>
