--- a/app/views/pages/setname.html.erb
+++ b/app/views/pages/setname.html.erb
@@ -1,4 +1,11 @@
-
 <h1>Pages#setname</h1>
 <p>Find me in app/views/pages/setname.html.erb</p>
-
+<%= form_for @user, url: {action: 'update'}  do |f| %>
+<div class="field">
+  <%= f.label :username %><br>
+  <%= f.text_field :username %>
+  </div>
+<div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
