--- a/app/views/pages/setname.html.erb
+++ b/app/views/pages/setname.html.erb
@@ -2,8 +2,9 @@
 <p>Find me in app/views/pages/setname.html.erb</p>
 <%= form_for @user, url: {action: 'update'}  do |f| %>
 <div class="field">
-  <%= f.label :username %><br>
+  <%= f.label :こんにちは %><br>
   <%= f.text_field :username %>
+  さん
   </div>
 <div class="actions">
     <%= f.submit %>
