--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -26,4 +26,6 @@
 </p>
 
 <%= link_to 'Edit', edit_event_path(@event) %> |
-<%= link_to 'Back', events_path %>
+<%= link_to 'Join', new_join_event_path %> |
+<%= link_to 'List', join_events_path %> |
+<%= link_to 'Back', events_path %> 
