--- a/app/views/pages/setname.html.erb
+++ b/app/views/pages/setname.html.erb
@@ -1,12 +1,11 @@
-<h1>Pages#setname</h1>
-<p>Find me in app/views/pages/setname.html.erb</p>
+
 <%= form_for @user, url: {action: 'update'}  do |f| %>
 <div class="field">
-  <%= f.label :こんにちは %><br>
+  <%= f.label :空欄の場合は名前を登録してください %><br>
   <%= f.text_field :username %>
   さん
   </div>
 <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :登録%>
   </div>
 <% end %>
