--- a/app/views/pages/setname.html.erb
+++ b/app/views/pages/setname.html.erb
@@ -1,11 +1,11 @@
-
+<h2>名前の登録</h2>
 <%= form_for @user, url: {action: 'update'}  do |f| %>
 <div class="field">
-  <%= f.label :空欄の場合は名前を登録してください %><br>
+  <%= f.label :なまえを記入してください %><br>
   <%= f.text_field :username %>
   さん
   </div>
 <div class="actions">
-    <%= f.submit :登録%>
+    <%= f.submit :OK%>
   </div>
 <% end %>
