--- a/app/views/join_events/index.html.erb
+++ b/app/views/join_events/index.html.erb
@@ -16,9 +16,9 @@
 
     
     <tr>
-        <td><%= join_event.userid %></td>
-     <!--   <td><%= join_event.eventid %></td>
-        <td><%= join_event.status %></td>  -->
+        <td><%= join_event.user_id %></td>
+        <td><%= join_event.event_id %></td>
+        <!--<td><%= join_event.status %></td>  -->
         <td><%= join_event.comment %></td>
         <td><%= link_to 'Show_', join_event %></td>
         <td><%= link_to 'Edit_', edit_join_event_path(join_event) %></td>
