--- a/app/views/join_events/show.html.erb
+++ b/app/views/join_events/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>社員ID:</strong>
-  <%= @join_event.userid %>
+  <%= @join_event.user_id %>
 </p>
 
 <p>
   <strong>イベントID:</strong>
-  <%= @join_event.eventid %>
+  <%= @join_event.event_id %>
 </p>
 
 
