--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -26,6 +26,7 @@
 </p>
 
 <%= link_to 'Edit', edit_event_path(@event) %> |
-<%= link_to 'Join', new_join_event_path %> |
-<%= link_to 'List', join_events_path %> |
+<%= link_to 'Join', "/join_events/new?event_id=#{@event.id}" %> |
+<%= link_to 'List', "/join_events?event_id=#{@event.id}" %>
+<%#= link_to 'List', join_events_path %> |
 <%= link_to 'Back', events_path %> 
