--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,12 +7,12 @@
 
 <p>
   <strong>開催日時:</strong>
-  <%= @event.startEvent.strftime('%Y年%m月%d日(%a) %H:%M:%S') %>
+  <%= @event.startEvent.strftime('%Y年%m月%d日(%a) %H:%M') %>
 </p>
 
 <p>
   <strong>終了日時:</strong>
-  <%= @event.endEvent.strftime('%Y年%m月%d日(%a) %H:%M:%S') %>
+  <%= @event.endEvent.strftime('%Y年%m月%d日(%a) %H:%M') %>
 </p>
 
 <p>
