--- a/app/views/join_events/show.html.erb
+++ b/app/views/join_events/show.html.erb
@@ -24,5 +24,5 @@
   <%= @join_event.comment %>
 </p>
 
-<%= link_to 'Edit', edit_join_event_path(@join_event) %> |
-<%= link_to 'Back', join_events_path %>
+<%= link_to '編集', edit_join_event_path(@join_event) %> |
+<%= link_to '戻る', join_events_path %>
