--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -25,8 +25,8 @@
   <%= @event.eventComment %>
 </p>
 
-<%= link_to 'Edit', edit_event_path(@event) %> |
-<%= link_to 'Join', "/join_events/new?event_id=#{@event.id}" %> |
-<%= link_to 'List', "/join_events?event_id=#{@event.id}" %>
+<%= link_to '編集', edit_event_path(@event) %> |
+<%= link_to '参加', "/join_events/new?event_id=#{@event.id}" %> |
+<%= link_to '参加者一覧', "/join_events?event_id=#{@event.id}" %>
 <%#= link_to 'List', join_events_path %> |
-<%= link_to 'Back', events_path %> 
+<%= link_to '戻る', events_path %> 
